Fix Flutter Web UI with Noto fonts support and PWA widget updates

--- a/rapid_mixer/index.html
+++ b/rapid_mixer/index.html
@@ -19,6 +19,11 @@
     <title>rapid_mixer</title>
     <link rel="manifest" href="manifest.json" />
 
+    <!-- Google Fonts - Noto fonts for Tamil and other characters -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Tamil:wght@100..900&family=Noto+Music&display=swap" rel="stylesheet">
+
     <style>
       body {
         background: #000;
